[package]
name = "CS128H-Any-Preferences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tts = "0.21.1"
vader_sentiment = "0.1.1"
rand = "0.8.5"
byteorder = "1.3.4"
encoding = "0.2.33"
uuid = "0.8.1"
clap = "2.33.3"
bwavfile = "1.1.0"
